Closed Bug 1581139 Opened 4 years ago Closed 2 years ago

Fire InvalidModificationError on track set changes

Categories

(Core :: Audio/Video: Recording, defect, P2)

defect

Tracking

()

RESOLVED FIXED
84 Branch
Tracking Status
firefox84 --- fixed

People

(Reporter: pehrsons, Assigned: pehrsons)

Details

(Keywords: dev-doc-complete)

Attachments

(1 file)

Step 15.3.2 of MediaRecorder.start says to fire InvalidModificationError, but we currently fire UnknownError.

This needs to be fixed in MediaRecorder. And in some tests.

We could do with documenting the exceptions on MediaRecorder.

Keywords: dev-doc-needed
Assignee: nobody → apehrson
Status: NEW → ASSIGNED
Priority: P3 → P2
Pushed by pehrsons@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/5b0fae6faba3
Fire InvalidModificationError on MediaRecorder track set changes. r=bryce
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 84 Branch

Documentation updated in respect to this change; see https://github.com/mdn/sprints/issues/3898#issuecomment-730430206 for full details.

You need to log in before you can comment on or make changes to this bug.