Bug 1581139 - Fire InvalidModificationError on MediaRecorder track set changes. r=bryce

Differential Revision: https://phabricator.services.mozilla.com/D95694